# paper-machine

./: .gitignore  CLAUDE.md  README.md  foothold.md  justfile  pyproject.toml
.claude/: settings.json
.claude/agents/: experimenter.md  literature-reviewer.md  paper-writer.md  planner.md
.claude/rules/: 00-overview.md
.claude/rules/python/: conventions.md
.claude/skills/compile-latex/: SKILL.md
.claude/skills/run-experiment/: SKILL.md
orchestrator/: __init__.py  agent.py  budget.py  events.py  orchestrate.py  run_log.py  state.py
workspaces/paper-writing/: Containerfile  justfile  pyproject.toml
workspaces/paper-writing/.claude/: settings.json
workspaces/paper-writing/.claude/agents/: experimenter.md  literature-reviewer.md  paper-writer.md  reviewer.md
workspaces/paper-writing/.claude/rules/: 10-experiment-protocol.md  20-paper-protocol.md
workspaces/paper-writing/.claude/rules/latex/: style.md
workspaces/paper-writing/.claude/rules/python/: conventions.md
workspaces/paper-writing/.claude/skills/compile-latex/: SKILL.md
workspaces/paper-writing/scripts/: run-latex
