[project]
name = "paper-machine-orchestrator"
version = "0.1.0"
description = "Framework: orchestrates Claude Code subprocesses into a multi-agent research pipeline"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orchestrator"]
