[project]
name = "workspace-paper-writing"
version = "0.1.0"
description = "Research workspace — automated paper writing (current: quant trading, GEMM CPU optimization)"
requires-python = ">=3.11"
dependencies = [
    "paper-machine-orchestrator",
    "numba>=0.65.0",
    "yfinance>=1.3.0",
    "matplotlib>=3.10.8",
]

# This workspace is not itself installable — it's a research workdir.
[tool.uv]
package = false

# Framework lives two directories up; installed editable so code changes
# there take effect without a re-sync.
[tool.uv.sources]
paper-machine-orchestrator = { path = "../..", editable = true }
